--- a/README.org
+++ b/README.org
@@ -1,2 +1,7 @@
 * BUCLD2014
 This script was used to calculate vowel cluster divergences reported in Alejandrina Cristia, Kristine Onishi, Golnoush Alamian, Maarten Versteegh, Amanda Seidl, "Acoustic cues to phonological status in infant-directed speech".
+
+Requirements:
+[[https://github.com/mwv/cdtw][cdtw]]
+[[https://github.com/mwv/textgrid][textgrid]]
+[[https://github.com/mwv/spectral][spectral]]
